fixed custom cursor disappearing on firefox and horizontal overflow

--- a/styles/_cursor.scss
+++ b/styles/_cursor.scss
@@ -53,10 +53,4 @@
       }
     }
   }
-
-  @media only screen and (max-width: 700px) {
-    body .cursor-wrapper {
-      display: "none";
-    }
-  }
 }
